<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/TopBar">

                <ImageView
                    android:id="@+id/see_report_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_back"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/MyOrangeO"
                    android:text="@string/voltar"
                    android:textSize="8pt"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/see_report_back"
                    android:layout_marginTop="36dp"/>

                <TextView
                    android:id="@+id/label_listagem_anotacoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/see_report_back"
                    android:layout_marginTop="10dp"
                    android:text="@string/titulo_SPU"
                    android:textAlignment="center"
                    android:textColor="@color/MyBrown"
                    android:textSize="10pt"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="@id/TopBar">

                <TextView
                    android:id="@+id/label_titulo_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10pt"
                    android:textColor="@color/MyOrangeB"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/campo_titulo"/>

                <EditText
                    android:id="@+id/report_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_titulo"
                    android:textSize="8pt"
                    android:editable="false"
                    android:textColor="@color/MyBrown"
                    android:layout_below="@id/label_titulo_report"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp" />

                <TextView
                    android:id="@+id/label_desc_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10pt"
                    android:layout_below="@id/report_titulo"
                    android:textColor="@color/MyOrangeB"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/campo_descricao"/>

                <EditText
                    android:id="@+id/report_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_descricao"
                    android:textSize="8pt"
                    android:editable="false"
                    android:textColor="@color/MyBrown"
                    android:layout_below="@id/label_desc_report"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp" />

                <TextView
                    android:id="@+id/label_img_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10pt"
                    android:layout_below="@id/report_desc"
                    android:textColor="@color/MyOrangeB"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/campo_imagem"/>

                <EditText
                    android:id="@+id/report_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_imagem"
                    android:textSize="8pt"
                    android:editable="false"
                    android:textColor="@color/MyBrown"
                    android:layout_below="@id/label_img_report"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp" />

                <TextView
                    android:id="@+id/label_atualizada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:gravity="center"
                    android:layout_below="@id/report_img"
                    android:textColor="@color/MyGrayL"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/label_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:gravity="center"
                    android:layout_below="@id/label_atualizada"
                    android:textColor="@color/MyGrayL"
                    android:layout_marginTop="20dp"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/rt_conf"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:visibility="invisible"
        android:background="@color/MyWhite">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_alignParentTop="true"
            android:textColor="@color/MyBrown"
            android:text="Pretende efetivamente apagar esta anotação?"
            android:textSize="9pt"/>

        <Button
            android:id="@+id/btn_conf_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/MyOrangeB"
            android:textColor="@color/MyWhite"
            android:textSize="8pt"
            android:textStyle="bold"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="20dp"
            android:text="SIM"/>

        <Button
            android:id="@+id/btn_conf_nao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/MyOrangeB"
            android:textColor="@color/MyWhite"
            android:textSize="8pt"
            android:textStyle="bold"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="20dp"
            android:text="NAO"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>